docs: add Web-rebuild & Client-port briefs; refresh CLAUDE.md for modernized modules
- docs/WebTinyTank-rebuild.md: scope, target stack (Vite/React + Playwright),
  the 1.2->2.16 learnings, shared-data contract — brief for a fresh rebuild session
- docs/ClientTinyTank-libgdx-port.md: LWJGL2/arm64 wall, libGDX port plan, Rosetta
  stopgap, reuse-vs-rewrite — brief for a fresh port session
- refresh root + Data/Server/Client CLAUDE.md to the modernized stacks (Node 22 /
  Express 5 / mongodb 7; Java 21; HttpClient+Jackson; vendored Pair; Nifty on Central;
  Docker), fix stale facts (UI is Swing not JavaFX) and note fixed bugs / runtime caveats

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>